# signalguard-logs

./: README.md  init_sg_logs.py  pyproject.toml
docs/: index.html  styles.css
signalguard_logs/: __init__.py
signalguard_logs/detectors/: __init__.py  base.py  burst.py  new_template.py  semantic_iforest.py
signalguard_logs/examples/: synthetic_error_burst.py  synthetic_new_pattern.py
signalguard_logs/features/: __init__.py  templates.py  text_vectorizer.py
signalguard_logs/models/: __init__.py  record.py  stream.py
signalguard_logs/parsing/: __init__.py  json_parser.py  regex_parser.py
signalguard_logs/recipes/: __init__.py  combined_health.py  error_burst.py  new_pattern.py
tests/: test_templates.py
