[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signalguard-logs"
version = "0.1.0"
description = "Log AIOps toolkit for parsing, templating, and anomaly detection"
authors = [
  { name = "Danial Amin" }
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn"
]
